# recursive-digest

./: Cargo.toml  README.md
src/: lib.rs
tests/: sanity.rs
