[package]
edition = "2018"
name = "crev-recursive-digest"
version = "0.5.0"
description = "Library implementing recursive digest for filesystem directories"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
documentation = "https://docs.rs/crev-recursive-digest"
repository = "https://github.com/crev-dev/cargo-crev/tree/master/recursive-digest"
homepage = "https://github.com/crev-dev/cargo-crev/tree/master/recursive-digest"
keywords = ["data", "filesystem", "digest", "hash"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
digest = "0.9"
thiserror = "1.0.11"
walkdir = "2"

[dev-dependencies]
hex = "0.3"
tempdir = "0.3"
blake2 = "0.9.1"
